--- a/test/pac/test.html
+++ b/test/pac/test.html
@@ -3,7 +3,7 @@
 <head>
     <title>PAC Test</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <script type="text/javascript" src="https://pexcn.me/daily/pac/whitelist.pac"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/pexcn/daily/gh-pages/pac/whitelist.pac"></script>
     <script type="text/javascript" src="test.js"></script>
 </head>
 <body onload="begin_test()">
